--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Business online</title>
+    <title>Business Online by charmyou3636</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -11,8 +11,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Charmyou3636.GitHub.io</h1>
-      <h2 class="project-tagline">buonline.cn</h2>
+      <h1 class="project-name">Business Online</h1>
+      <h2 class="project-tagline">在线商务</h2>
     </section>
 
     <section class="main-content">
